# microservice

./: .env  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
auth/user/: user.py
server/: pyproject.toml
settings/: dev.py  incuirer_file.py  start.py
